<resources xmlns:tools="http://schemas.android.com/tools">
	<string name="form_title_picture" tools:ignore="UnusedResources">Picture</string>
	<string name="form_title_photo" tools:ignore="UnusedResources">Photo</string>
	<string name="form_title_profile" tools:ignore="UnusedResources">Profile</string>
	<string name="form_title_password" tools:ignore="UnusedResources">Change password</string>
	<string name="form_title_signin" tools:ignore="UnusedResources">Sign in</string>
	<string name="form_title_signup" tools:ignore="UnusedResources">Sign up</string>
	<string name="form_title_preferences" tools:ignore="UnusedResources">[@string/name_app] settings</string>
	<string name="form_title_comment" tools:ignore="UnusedResources">Comment</string>
	<string name="form_title_feedback" tools:ignore="UnusedResources">Send feedback</string>
	<string name="form_title_report" tools:ignore="UnusedResources">Report a problem</string>
	<string name="form_title_reset" tools:ignore="UnusedResources">Password reset</string>
	<string name="form_title_invite" tools:ignore="UnusedResources">Send invitations</string>
	<string name="form_title_tune" tools:ignore="UnusedResources">Tune</string>
	<string name="form_title_watchers" tools:ignore="UnusedResources">Watchers</string>
	<string name="menu_item_beacons">Beacons</string>
	<string name="menu_item_add_entity">Add content</string>
	<string name="menu_item_new_place">Make a place</string>
	<string name="menu_item_refresh">Refresh</string>
	<string name="menu_item_notifications">Notifications</string>
	<string name="menu_item_edit">Edit</string>
	<string name="menu_item_edit_place">Edit place</string>
	<string name="menu_item_edit_user">Edit profile</string>
	<string name="menu_item_save_beacon">Save beacon</string>
	<string name="menu_item_share">Share</string>
	<string name="menu_item_search">Search</string>
	<string name="menu_item_share_place">Share</string>
	<string name="menu_item_profile">Profile</string>
	<string name="menu_item_home">Home</string>
	<string name="menu_item_navigate">Directions</string>
	<string name="menu_item_settings">Settings</string>
	<string name="menu_item_help">Help</string>
	<string name="menu_item_signout">Sign out</string>
	<string name="menu_item_signin">Sign in</string>
	<string name="menu_item_send">Send</string>
	<string name="menu_item_invite">Invite</string>
	<string name="menu_item_feedback">Feedback</string>
	<string name="menu_item_delete">Delete</string>
	<string name="menu_item_remove">Remove</string>
	<string name="menu_item_accept">Accept</string>
	<string name="menu_item_cancel">Cancel</string>
	<string name="menu_item_zoom_in">Zoom in</string>
	<string name="menu_item_zoom_out">Zoom out</string>
	<string name="menu_item_browse_watchers">Watchers</string>
	<string name="menu_item_report">Report abuse</string>
	<string name="help_radar_browse_places">Radar finds [@string/container_plural_lowercase] nearby you can browse and interact with.</string>
	<string name="help_radar_new_places">Use the action bar to make and share custom [@string/container_plural_lowercase].</string>
	<string name="help_place_tune">Tune [@string/container_plural_lowercase] to make them better.</string>
	<string name="help_place_add">Use the action bar to add pictures and comments.</string>
	<string name="help_applink_list">Add a website or facebook link and we suggest related links that might be useful.</string>
	<string name="dialog_ok">OK</string>
	<string name="dialog_cancel">Cancel</string>
	<string name="dialog_enable_wifi_ok">Settings</string>
	<string name="dialog_enable_wifi_cancel">No thanks</string>
	<string name="dialog_address_builder_title">Address</string>
	<string name="dialog_category_builder_title">Category</string>
	<string name="dialog_place_picker_search_title">Pick a [@string/container_singular_lowercase]</string>
	<string name="dialog_photo_picker_search_title">Photo search</string>
	<string name="dialog_photo_source_title">Select photo</string>
	<string name="dialog_photo_source_search">Search for photos</string>
	<string name="dialog_photo_source_gallery">Select a gallery photo</string>
	<string name="dialog_photo_source_camera">Take a new photo</string>
	<string name="dialog_photo_source_place">Select a place photo</string>
	<string name="dialog_photo_source_facebook">Use Facebook photo</string>
	<string name="dialog_photo_source_twitter">Use Twitter photo</string>
	<string name="dialog_photo_source_website_thumbnail">Use website thumbnail</string>
	<string name="dialog_photo_source_default">Default</string>
	<string name="dialog_install_title">Install</string>
	<string name="dialog_install_message">An android application is available for this link.</string>
	<string name="dialog_install_ok">Install</string>
	<string name="dialog_install_later">Later</string>
	<string name="dialog_install_cancel">No thanks</string>
	<string name="dialog_install_toast_package_installed">has been installed. Tap the link to launch.</string>
	<string name="dialog_update_title">Update available</string>
	<string name="dialog_update_message">Please update to the latest version of [@string/name_app].</string>
	<string name="dialog_update_ok">Update</string>
	<string name="dialog_update_cancel">No thanks</string>
	<string name="dialog_application_picture_new">Add a picture</string>
	<string name="dialog_application_comment_new">Add a comment</string>
	<string name="dialog_unwatch_private_title">Leave private [@string/container_singular_lowercase]</string>
	<string name="dialog_unwatch_private_message">If you leave a private [@string/container_singular_lowercase], content will no longer be visible to you.</string>
	<string name="dialog_unwatch_private_ok">Leave</string>
	<string name="dialog_unwatch_private_cancel">Cancel</string>
	<string name="dialog_watch_private_title">Watch private [@string/container_singular_lowercase]</string>
	<string name="dialog_watch_private_message">A request to watch this [@string/container_singular_lowercase] will be sent to the [@string/container_singular_lowercase] owner.</string>
	<string name="dialog_watch_private_ok">Watch</string>
	<string name="dialog_watch_private_cancel">Cancel</string>
	<string name="dialog_decline_approved_private_title">Remove watcher</string>
	<string name="dialog_decline_approved_private_message">The watcher will be removed and unable to view content for this [@string/container_singular_lowercase].</string>
	<string name="dialog_decline_approved_private_ok">Remove</string>
	<string name="dialog_decline_approved_private_cancel">Cancel</string>
	<string name="dialog_decline_requested_private_title">Decline request</string>
	<string name="dialog_decline_requested_private_message">The watch request will be declined and removed from the list.</string>
	<string name="dialog_decline_requested_private_ok">Decline</string>
	<string name="dialog_decline_requested_private_cancel">Cancel</string>
	<string name="dialog_location_services_disabled_title">Location services disabled</string>
	<string name="dialog_location_services_disabled_message">[@string/name_app] works better with access to your location. Please turn on location access.</string>
	<string name="dialog_location_services_disabled_ok">Settings</string>
	<string name="dialog_location_services_disabled_cancel">Ignore</string>
	<string name="alert_entity_locked">This [@schema] has been locked by the owner.</string>
	<string name="alert_wifi_title">@string/name_app</string>
	<string name="alert_wifi_tethered">Turn off hotspot tethering for best results using [@string/name_app].</string>
	<string name="alert_wifi_disabled">Enable wifi for best results using [@string/name_app].</string>
	<string name="alert_wifi_settings">Settings</string>
	<string name="alert_deleted">Deleted</string>
	<string name="alert_removed">Removed</string>
	<string name="alert_updated">Updated</string>
	<string name="alert_inserted">Saved</string>
	<string name="alert_shared">Shared</string>
	<string name="alert_cancelled">Cancelled</string>
	<string name="alert_saved_and_shared">Saved and shared</string>
	<string name="alert_signed_in">Signed in as</string>
	<string name="alert_password_changed">You have been automatically signed in with your new password</string>
	<string name="alert_beacons_title">[@string/name_app] beacons</string>
	<string name="alert_feedback_sent">Thank you for the feedback!</string>
	<string name="alert_report_sent">Your report has been sent. Thank you!</string>
	<string name="alert_invite_sent">Your invitation has been sent. Thank you!</string>
	<string name="alert_invite_sent_plural">Your invitations have been sent. Thank you!</string>
	<string name="alert_applink_broken">Link failed verification</string>
	<string name="alert_applinks_broken">One or more links failed verification</string>
	<string name="alert_applinks_refreshed">Links refreshed.</string>
	<string name="alert_signed_out">Signed out.</string>
	<string name="alert_applinks_no_links">No related links found.</string>
	<string name="alert_applinks_linked">Found related link(s).</string>
	<string name="alert_exit_confirm">Press Back once more to exit</string>
	<string name="alert_copied_to_clipboard">Copied to clipboard</string>
	<string name="alert_auto_watch">You are now watching this patch</string>
	<string name="alert_location_services_disabled">Waiting for location&#8230;</string>
	<string name="alert_signin_message">Sign in to use this feature.</string>
	<string name="alert_signin_message_add_to">Sign in to add content.</string>
	<string name="symbol_bullet">&#8226;</string>
	<string name="button_change_picture">Set photo</string>
	<string name="button_sign_in">Sign in</string>
	<string name="button_register">Join</string>
	<string name="button_reset_password">Submit</string>
	<string name="button_terms">Terms of Service</string>
	<string name="button_forgot_password">Forgot password?</string>
	<string name="button_tuning_tune">I\'m here</string>
	<string name="button_tuning_untune">I\'m not here</string>
	<string name="button_tuning_edit">Edit</string>
	<string name="label_fullname">Full name</string>
	<string name="label_password">Password (6 characters or more)</string>
	<string name="label_password_unmask">Show password</string>
	<string name="label_terms">By joining, you agree to the</string>
	<string name="label_password_confirm">Confirm password</string>
	<string name="label_email">Email</string>
	<string name="label_tuning_banner_no_name">Is there a photo that would make a great banner for this [@string/container_singular_lowercase]? Search, browse or use the camera.</string>
	<string name="label_tuning_tune_no_name">If you are currently at the [@string/container_plural_lowercase] you are browsing, make [@string/name_app] better by tuning the [@string/container_plural_lowercase] for faster and more accurate discovery.</string>
	<string name="label_tuning_edit_no_name">Update [@string/container_plural_lowercase] details like the address or customize links.</string>
	<string name="label_comment_parent">Comment added for:</string>
	<string name="label_reset_message_email">Forgot your password? Enter your email address:</string>
	<string name="label_section_banner">Great banner</string>
	<string name="label_section_tuning">Lock it in</string>
	<string name="label_section_edit">Advanced editing</string>
	<string name="dummy_title">Zoka Coffee Roaster &amp; Tea Company</string>
	<string name="dummy_title_short">Zoka Coffee</string>
	<string name="dummy_subtitle">Roasters &amp; Tea Company</string>
	<string name="dummy_name">Jay Massena</string>
	<string name="dummy_timesince_short">10m</string>
	<string name="dummy_datetime">December 23 at 10:12am</string>
	<string name="dummy_message">Ever wonder why fans refuse to use anything else? For more than four days, aircandi has attracted a growing family of loyal, almost zealous customers, known as “Candiniks”.</string>
</resources>