<?xml version="1.0" encoding="utf-8"?>
<com.aircandi.ui.widgets.AirScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:custom="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_gravity="center_horizontal"
	android:fillViewport="true"
	tools:context=".ui.user.RegisterEdit">

	<!-- Content -->

	<LinearLayout
		style="@style/form_content_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical|top"
		android:orientation="vertical">

		<!-- User picture -->

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:gravity="left"
			android:orientation="horizontal">

			<com.aircandi.ui.widgets.AirImageView
				android:id="@+id/entity_photo"
				style="@style/selectable_image"
				android:layout_width="@dimen/image_medium"
				android:layout_height="@dimen/image_medium"
				android:layout_marginRight="8dp"
				android:clickable="true"
				android:minWidth="@dimen/image_medium"
				android:onClick="onChangePhotoButtonClick"
				android:scaleType="centerCrop"
				custom:layout="@layout/widget_webimageview_framed"
				custom:showBusy="true"
				custom:sizeHint="@dimen/image_medium"
				custom:sizeType="thumbnail" />

			<com.aircandi.ui.widgets.ComboButton
				android:id="@+id/button_change_image"
				style="@style/button_link"
				android:layout_width="@dimen/button_width_min"
				android:layout_height="@dimen/button_height"
				android:layout_gravity="center_vertical"
				android:onClick="onChangePhotoButtonClick"
				custom:label="@string/button_change_picture" />
		</LinearLayout>

		<!-- Full name -->

		<com.aircandi.ui.widgets.AirEditText
			android:id="@+id/name"
			android:layout_width="match_parent"
			android:layout_height="@dimen/form_field_height"
			android:drawableRight="?attr/iconClear"
			android:hint="@string/label_fullname"
			android:inputType="textCapWords|textPersonName|textNoSuggestions"
			android:textAppearance="?attr/textAppearanceMediumLarge" />

		<com.aircandi.ui.widgets.AirEditText
			android:id="@+id/email"
			android:layout_width="match_parent"
			android:layout_height="@dimen/form_field_height"
			android:drawableRight="?attr/iconClear"
			android:hint="@string/label_email"
			android:inputType="textEmailAddress"
			android:textAppearance="?attr/textAppearanceMediumLarge" />

		<com.aircandi.ui.widgets.AirEditText
			android:id="@+id/password"
			android:layout_width="match_parent"
			android:layout_height="@dimen/form_field_height"
			android:drawableRight="?attr/iconClear"
			android:hint="@string/label_password"
			android:inputType="textPassword"
			android:textAppearance="?attr/textAppearanceMediumLarge" />

		<com.aircandi.ui.widgets.AirEditText
			android:id="@+id/password_confirm"
			android:layout_width="match_parent"
			android:layout_height="@dimen/form_field_height"
			android:layout_marginBottom="10dp"
			android:drawableRight="?attr/iconClear"
			android:hint="@string/label_password_confirm"
			android:imeOptions="actionGo"
			android:inputType="textPassword"
			android:textAppearance="?attr/textAppearanceMediumLarge" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp"
			android:orientation="horizontal">

			<com.aircandi.ui.widgets.AirTextView
				android:id="@+id/terms"
				style="@style/form_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:layout_marginLeft="5dp"
				android:layout_marginRight="5dp"
				android:layout_weight="1"
				android:textAppearance="@style/textAppearanceExtraSmall"
				custom:textId="@string/label_terms" />

			<com.aircandi.ui.widgets.ComboButton
				android:id="@+id/button_view_terms"
				style="@style/button_link"
				android:layout_width="wrap_content"
				android:layout_height="@dimen/button_height"
				android:layout_gravity="center_vertical"
				android:layout_weight="1"
				android:minWidth="200dp"
				android:onClick="onViewTermsButtonClick"
				custom:label="@string/button_terms" />
		</LinearLayout>

		<com.aircandi.ui.widgets.ComboButton
			android:id="@+id/button_register"
			style="@style/button_link"
			android:layout_width="match_parent"
			android:layout_height="@dimen/button_height"
			android:onClick="onRegisterButtonClick"
			custom:label="@string/button_register" />
	</LinearLayout>

</com.aircandi.ui.widgets.AirScrollView>