<?xml version="1.0" encoding="utf-8"?>
<com.aircandi.ui.widgets.AirLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    style="@style/form_content_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top|center_horizontal"
    android:orientation="vertical"
    android:paddingTop="20dp" >

    <!-- Title and Content -->

    <com.aircandi.ui.widgets.AirEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/form_field_height"
        android:layout_marginBottom="8dp"
        android:drawableRight="?attr/iconClear"
        android:hint="@string/label_email"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/textAppearanceMedium" />

    <com.aircandi.ui.widgets.AirEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/form_field_height"
        android:layout_marginBottom="8dp"
        android:drawableRight="?attr/iconClear"
        android:hint="@string/label_password"
        android:imeOptions="actionGo"
        android:inputType="textPassword"
        android:textAppearance="@style/textAppearanceMedium" />

    <com.aircandi.ui.widgets.AirCheckBox
        android:id="@+id/chk_unmask"
        android:layout_width="match_parent"
        android:layout_height="@dimen/form_field_height"
        android:layout_marginBottom="8dp"
        android:textAppearance="?android:attr/textAppearance"
        custom:textId="@string/label_password_unmask" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <com.aircandi.ui.widgets.ComboButton
            android:id="@+id/button_sign_in"
            style="@style/button_link"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:minWidth="200dp"
            android:onClick="onSignInButtonClick"
            custom:label="@string/button_sign_in" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal" >

        <com.aircandi.ui.widgets.ComboButton
            android:id="@+id/button_forgot_password"
            style="@style/button_link"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:onClick="onForgotPasswordButtonClick"
            custom:label="@string/button_forgot_password" />

        <com.aircandi.ui.widgets.ComboButton
            android:id="@+id/button_signup"
            style="@style/button_link"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:onClick="onSignupButtonClick"
            custom:label="@string/button_register" />
    </LinearLayout>

</com.aircandi.ui.widgets.AirLinearLayout>