<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:custom="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:descendantFocusability="blocksDescendants"
	android:focusable="false"
	android:focusableInTouchMode="false"
	android:orientation="vertical"
	android:paddingTop="@dimen/form_body_padding_top">

	<LinearLayout
		android:id="@+id/holder_user"
		style="@style/selectable_item"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="15dp"
		android:layout_marginLeft="@dimen/form_body_padding"
		android:layout_marginRight="@dimen/form_body_padding"
		android:baselineAligned="false"
		android:clickable="true"
		android:onClick="onEntityClick"
		android:orientation="horizontal">

		<com.aircandi.ui.widgets.AirImageView
			android:id="@+id/user_photo"
			style="@style/selectable_image"
			android:layout_width="@dimen/image_small"
			android:layout_height="@dimen/image_small"
			android:layout_marginRight="5dp"
			android:scaleType="centerCrop"
			custom:layout="@layout/widget_webimageview_framed"
			custom:showBusy="true"
			custom:sizeType="thumbnail"
			custom:sizeHint="@dimen/image_small" />

		<RelativeLayout
			android:id="@+id/holder_author"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:layout_marginBottom="2dp"
			android:gravity="bottom">

			<com.aircandi.ui.widgets.AirTextView
				android:id="@+id/user_name"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:ellipsize="end"
				android:singleLine="true"
				android:text="@string/dummy_name"
				android:textStyle="bold"
				custom:textId="@string/dummy_name" />

			<TextView
				android:id="@+id/symbol_at"
				style="@style/bullet"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_marginLeft="1dp"
				android:layout_toRightOf="@+id/user_name"
				android:paddingLeft="4dp"
				android:paddingRight="4dp"
				android:text="@string/symbol_bullet" />

			<com.aircandi.ui.widgets.AirTextLight
				android:id="@+id/to_name"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_toRightOf="@+id/symbol_at"
				android:ellipsize="end"
				android:singleLine="true"
				android:text="@string/dummy_title"
				custom:textId="@string/dummy_name" />
		</RelativeLayout>
	</LinearLayout>

	<com.aircandi.ui.widgets.AirTextLight
		android:id="@+id/description"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="15dp"
		android:paddingLeft="@dimen/form_body_padding"
		android:paddingRight="@dimen/form_body_padding"
		android:text="@string/dummy_message"
		android:textAppearance="@style/text_appearance_medium"
		custom:textId="@string/dummy_message" />

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="5dp"
		android:paddingLeft="8dp"
		android:paddingRight="@dimen/form_body_padding">

		<com.aircandi.ui.widgets.EntityView
			android:id="@+id/parent"
			style="@style/selectable_item"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_toLeftOf="@+id/button_overflow"
			android:clickable="true"
			android:onClick="onEntityClick"
			custom:label="@string/label_comment_parent" />

		<com.aircandi.ui.widgets.ComboButton
			android:id="@+id/button_overflow"
			style="@style/button_link"
			android:layout_width="@dimen/button_height"
			android:layout_height="@dimen/button_height"
			android:layout_alignParentRight="true"
			android:layout_centerVertical="true"
			android:clickable="true"
			android:minWidth="@dimen/button_height"
			android:onClick="onOverflowButtonClick"
			custom:drawable="?attr/iconOverflow" />
	</RelativeLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="5dp"
		android:orientation="horizontal"
		android:paddingLeft="7dp"
		android:paddingRight="@dimen/form_body_padding">

		<com.aircandi.ui.widgets.AirTextLight
			android:id="@+id/created_date"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/dummy_datetime"
			android:textColor="?attr/textColorSecondary"
			custom:textId="@string/dummy_timesince_short" />
	</LinearLayout>

</LinearLayout>