<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:custom="http://schemas.android.com/apk/res-auto"
	style="@style/selectable_item"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:paddingBottom="2dp"
	android:paddingTop="2dp">

	<com.aircandi.ui.widgets.AirImageView
		android:id="@+id/entity_photo"
		style="@style/selectable_image"
		android:layout_width="@dimen/image_medium_small"
		android:layout_height="@dimen/image_medium_small"
		android:layout_alignParentTop="true"
		android:scaleType="centerCrop"
		custom:layout="@layout/widget_webimageview_framed_thick"
		custom:showBusy="true"
		custom:sizeType="thumbnail"
		custom:sizeHint="@dimen/image_medium_small" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerVertical="true"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"
		android:layout_toRightOf="@+id/entity_photo"
		android:orientation="vertical">

		<com.aircandi.ui.widgets.AirTextLight
			android:id="@+id/type"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:ellipsize="end"
			android:singleLine="true"
			android:textColor="@color/brand_primary"
			custom:textId="@string/dummy_name" />

		<com.aircandi.ui.widgets.AirTextLight
			android:id="@+id/name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:ellipsize="end"
			android:singleLine="true"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="?attr/textColor"
			android:textStyle="bold"
			custom:textId="@string/dummy_title_short" />

		<com.aircandi.ui.widgets.AirTextLight
			android:id="@+id/subtitle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:ellipsize="end"
			android:singleLine="true"
			android:textColor="?attr/textColorSecondary"
			android:textStyle="italic"
			custom:textId="@string/dummy_subtitle" />
	</LinearLayout>

</RelativeLayout>